# twopi

./: .gitignore  CMakeLists.txt  README.md  install-mac.sh
src/: main.cc
src/shaders/: compile.bat  mesh.vert
src/tutorial/: current.cc
src/twopi/: main.cc
src/twopi/application/: application.cc  application.h  application_impl.cc  application_vk.cc
src/twopi/core/: error.h  timestamp.h
src/twopi/engine/: engine.h
src/twopi/geometry/: image.cc  image.h  image_loader.cc  image_loader.h  mesh.cc  mesh.h  mesh_loader.cc  mesh_loader.h
src/twopi/gl/: gl_engine.cc  gl_engine.h  gl_framebuffer.cc  gl_framebuffer.h  gl_geometry.cc  gl_geometry.h  gl_renderbuffer.cc  gl_renderbuffer.h  gl_shader.cc  gl_shader.h  gl_texture.cc  gl_texture.h
src/twopi/gl/physics/: gl_mesh_cloth.cc  gl_mesh_cloth.h  gl_physics_simulator.cc  gl_physics_simulator.h
src/twopi/gpu/: gpu_device.cc  gpu_device.h  gpu_engine.cc  gpu_engine.h  gpu_swapchain.cc  gpu_swapchain.h
src/twopi/ovr/: ovr_swap_chain_vk.h
src/twopi/physics/: physics_engine.cc  physics_engine.h
src/twopi/physics/cloth/: mesh_cloth.cc  mesh_cloth.h
src/twopi/scene/: camera.cc  camera.h  camera_control.cc  camera_control.h  camera_orbit_control.cc  camera_orbit_control.h  color_material.cc  color_material.h  geometry.cc  geometry.h  light.cc  light.h  material.cc  material.h  scene.cc  scene.h  scene_node.cc  scene_node.h  vr_camera.cc  vr_camera.h
src/twopi/scene/geometry/: geometry.cc  geometry.h  patch_geometry.cc  patch_geometry.h
src/twopi/shader/: .gitignore  color.frag  color.vert  compile.py  cubeskin_compute.comp  cubeskin_support_lines.frag  cubeskin_support_lines.vert  light_color.frag  light_color.vert  light_floor.frag  light_floor.vert  light_instance.frag  light_instance.vert  mesh.frag  mesh.vert  mesh_instance.vert  screen.frag  shadow_map.frag  shadow_map.vert  surface.frag  surface.geom  surface.tesc  surface.tese  surface.vert  surface_normal.frag  triangle.frag  triangle.vert  vr_screen.frag
src/twopi/shader/core/: light.h
src/twopi/shader/gl/: screen.vert
src/twopi/shader/vk/: compile.py  mesh.frag  mesh.vert  triangle.vert  triangle_3d.vert
src/twopi/vk/: vk_buffer.cc  vk_buffer.h  vk_command_buffer.cc  vk_command_buffer.h  vk_command_pool.cc  vk_command_pool.h  vk_debug_utils_messenger.cc  vk_debug_utils_messenger.h  vk_descriptor_pool.cc  vk_descriptor_pool.h  vk_descriptor_set.cc  vk_descriptor_set.h  vk_descriptor_set_layout.cc  vk_descriptor_set_layout.h  vk_device.cc  vk_device.h  vk_device_memory.cc  vk_device_memory.h  vk_engine.cc  vk_engine.h  vk_fence.cc  vk_fence.h  vk_framebuffer.cc  vk_framebuffer.h  vk_graphics_pipeline.cc  vk_graphics_pipeline.h  vk_image.cc  vk_image.h  vk_image_view.cc  vk_image_view.h  vk_instance.cc  vk_instance.h  vk_instance_creator.cc  vk_instance_creator.h  vk_physical_device.cc  vk_physical_device.h  vk_pipeline_layout.cc  vk_pipeline_layout.h  vk_queue.cc  vk_queue.h  (+13 more)
src/twopi/vk/internal/: vk_debug_utils_messenger_handle.cc  vk_debug_utils_messenger_handle.h  vk_device_handle.cc  vk_device_handle.h  vk_handle.h  vk_handle_base.cc  vk_handle_base.h  vk_instance_handle.cc  vk_instance_handle.h  vk_physical_device_handle.cc  vk_physical_device_handle.h
src/twopi/vke/: vke_attribute.h  vke_buffer.cc  vke_buffer.h  vke_context.cc  vke_context.h  vke_engine.cc  vke_engine.h  vke_image.cc  vke_image.h  vke_memory.cc  vke_memory.h  vke_memory_manager.cc  vke_memory_manager.h  vke_model.cc  vke_model.h  vke_pipeline.cc  vke_pipeline.h  vke_sampler.cc  vke_sampler.h  vke_shader_info.cc  vke_shader_info.h  vke_swapchain.cc  vke_swapchain.h  vke_uniform.h
src/twopi/vkl/: vkl_buffer.cc  vkl_buffer.h  vkl_context.cc  vkl_context.h  vkl_engine.cc  vkl_engine.h  vkl_memory.h  vkl_memory_manager.cc  vkl_memory_manager.h  vkl_object.cc  vkl_object.h  vkl_rendertarget.cc  vkl_rendertarget.h  vkl_stage_buffer.cc  vkl_stage_buffer.h  vkl_swapchain.cc  vkl_swapchain.h  vkl_uniform_buffer.cc  vkl_uniform_buffer.h  vkl_vertex_buffer.cc  vkl_vertex_buffer.h
src/twopi/vkl/model/: vkl_cubeskin.cc  vkl_cubeskin.h
src/twopi/vkl/primitive/: vkl_floor.cc  vkl_floor.h  vkl_fur_sruface.cc  vkl_fur_surface.h  vkl_halfsphere_surface.cc  vkl_halfsphere_surface.h  vkl_sphere.cc  vkl_sphere.h  vkl_surface.cc  vkl_surface.h
src/twopi/vkw/: vkw_buffer.cc  vkw_buffer.h  vkw_command_buffer.cc  vkw_command_buffer.h  vkw_command_pool.cc  vkw_command_pool.h  vkw_descriptor_pool.cc  vkw_descriptor_pool.h  vkw_descriptor_set.cc  vkw_descriptor_set.h  vkw_descriptor_set_layout.cc  vkw_descriptor_set_layout.h  vkw_device.cc  vkw_device.h  vkw_device_memory.cc  vkw_device_memory.h  vkw_fence.cc  vkw_fence.h  vkw_framebuffer.cc  vkw_framebuffer.h  vkw_graphics_pipeline.cc  vkw_graphics_pipeline.h  vkw_image.cc  vkw_image.h  vkw_image_view.cc  vkw_image_view.h  vkw_instance.cc  vkw_instance.h  vkw_physical_device.cc  vkw_physical_device.h  vkw_pipeline_cache.cc  vkw_pipeline_cache.h  vkw_pipeline_layout.cc  vkw_pipeline_layout.h  vkw_queue.cc  vkw_queue.h  vkw_render_pass.cc  vkw_render_pass.h  vkw_sampler.cc  vkw_sampler.h  (+8 more)
src/twopi/window/: glfw_window.cc  glfw_window.h  win32_window.cc  win32_window.h  window.cc  window.h
src/twopi/window/event/: event.cc  event.h  keyboard_event.cc  keyboard_event.h  mouse_button_event.cc  mouse_button_event.h  mouse_move_event.cc  mouse_move_event.h  mouse_wheel_event.cc  mouse_wheel_event.h  resize_event.cc  resize_event.h  types.h
src/twopi_vr/application/: application.h  application_gl.cc  application_gl.h  application_impl.h  application_vk.h
src/twopi_vr/engine/: engine.cc
src/twopi_vr/ovr/: ovr_swap_chain_gl.cc  ovr_swap_chain_gl.h  ovr_swap_chain_vk.cc
src/twopi_vr/vk/: vulkan_engine.cc  vulkan_engine.h
vs/: twopi.sln
vs/twopi/: twopi.vcxproj  twopi.vcxproj.filters
